Fix CSS syntax for table border-collapse

--- a/mystyle.css
+++ b/mystyle.css
@@ -2,7 +2,7 @@
 h1{color:#F0A050;}
 th.important{color:red;}
 
-table {border-collapse: collapse｝
+table {border-collapse: collapse;｝
 
 table, th, td {border: 1px solid black;}
 
